src/styles.css
@font-face {
  font-family: 'Inter';
  src: url(./assets/fonts/InterVariable.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Inter';
  src: url(./assets/fonts/InterVariable-Italic.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
  font-display: block;
}

@font-face {
  font-family: 'Urbanist';
  src: url(./assets/fonts/Urbanist-VariableFont_wght.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Urbanist';
  src: url(./assets/fonts/Urbanist-Italic-VariableFont_wght.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
  font-display: block;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Urbanist', serif;
  font-weight: 550;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Inter', sans-serif;
  font-weight: 200;
  color: var(--ui-text);
}

input,
button {
  appearance: none;
  border: none;
  background-color: none;
  outline: none;
  color: var(--button-text);
}

:root {
  --player-1: rgb(0, 106, 255);
  --player-2: rgb(255, 0, 0);
  --player-3: rgb(40, 200, 75);
  --player-4: rgb(160, 20, 200);
}

/* MATHRACER THEMES START
        VVVVVVVVVV      */

:root {
  --background: rgb(110, 180, 255);
  --accent-1: rgb(19, 81, 148);
  --button-border: rgb(63, 63, 63);
  --button-background: rgb(187, 187, 187);
  --button-background-checked: rgb(255, 255, 255);
  --button-background-hover: rgb(241, 241, 241);
  --button-text: rgb(0, 0, 0);
  --ui-text: rgb(255, 255, 255);
  --numpad-icon-colour: filter: invert(0%) sepia(42%) saturate(0%) hue-rotate(121deg)
    brightness(99%) contrast(104%);
}

:root.dark {
  --background: rgb(0, 0, 0);
  --accent-1: rgb(35, 35, 35);
  --button-border: rgb(200, 200, 200);
  --button-background: rgb(20, 20, 20);
  --button-background-checked: rgb(150, 150, 150);
  --button-background-hover: rgb(60, 60, 60);
  --button-text: rgb(255, 255, 255);
  --ui-text: rgb(255, 255, 255);
  --numpad-icon-colour: invert(100%) sepia(0%) saturate(7479%) hue-rotate(47deg) brightness(100%)
    contrast(106%);
}

:root.light {
  --background: rgb(255, 255, 255);
  --accent-1: rgb(200, 200, 200);
  --button-border: rgb(0, 0, 0);
  --button-background: rgb(230, 230, 230);
  --button-background-checked: rgb(255, 255, 255);
  --button-background-hover: rgb(180, 180, 180);
  --button-text: rgb(0, 0, 0);
  --ui-text: rgb(0, 0, 0);
  --numpad-icon-colour: filter: invert(0%) sepia(42%) saturate(0%) hue-rotate(121deg)
    brightness(99%) contrast(104%);
}

:root.coder {
  --background: rgb(0, 0, 0);
  --accent-1: rgb(0, 0, 0);
  --button-border: rgb(0, 255, 50);
  --button-background: rgb(20, 20, 20);
  --button-background-checked: rgb(255, 255, 255);
  --button-background-hover: rgb(60, 60, 60);
  --button-text: rgb(0, 255, 50);
  --ui-text: rgb(0, 255, 50);
  --numpad-icon-colour: invert(58%) sepia(36%) saturate(5985%) hue-rotate(94deg) brightness(139%) contrast(101%);
}

/*      ^^^^^^^^^^
   MATHRACER THEMES END */

.hidden {
  display: none !important;
}

body {
  background-color: var(--background);
}

header {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  padding: 1rem 2rem;
  background-color: var(--accent-1);
}

.instruction {
  padding: 1rem 2rem;
  border: 0.5rem solid var(--ui-text);
  border-radius: 2rem;
}

.initial {
  margin: 0 auto;
  display: grid;
  justify-content: center;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: fit-content fit-content fit-content;
  width: fit-content;
  gap: 1rem;
}

.player {
  grid-column: 1 / -1;
  grid-row: 1;
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
}

.player.one,
.player.two,
.player.three,
.player.four {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0;
}

.one.icon {
  fill: var(--player-1);
}

.one.name {
  border-color: var(--player-1);
}

.two.icon {
  fill: var(--player-2);
}

.two.name {
  border-color: var(--player-2);
}

.three.icon {
  fill: var(--player-3);
}

.three.name {
  border-color: var(--player-3);
}

.four.icon {
  fill: var(--player-4);
}

.four.name {
  border-color: var(--player-4);
}

.name {
  border-radius: 2rem;
  padding: 0.5rem;
  width: 20rem;
  border: 0.5rem solid var(--button-border);
  font-size: 2rem;
  background-color: var(--button-background);
  color: var(--button-text);
}

.row-2 {
  grid-column: 1 / 3;
  grid-row: 2;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.tutorial-button,
.settings-button,
.close-settings {
  border-radius: 2rem;
  padding: 1rem 2rem;
  font-size: 2rem;
  border: 0.5rem solid var(--button-border);
  background-color: var(--button-background);
}

.settings-menu::backdrop {
  backdrop-filter: brightness(50%);
}

.settings-menu {
  margin: auto;
  padding: 1rem;
  border-radius: 2rem;
  background-color: var(--accent-1);
  max-width: 90vw;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  border: none;
  box-shadow: 0 16px 16px;
}

.settings.header {
  padding: 0 1rem;
  display: flex;
  justify-content: space-between;
}

.all-settings {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
}

.settings.title {
  grid-column: 1 / -1;
  grid-row: 1;
  justify-self: center;
  font-size: 5rem;
  margin-top: -0.5rem;
}

.close-settings {
  grid-column: 2;
  grid-row: 1;
  justify-self: end;
  width: fit-content;
  z-index: 1000;
}

.setting {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

h3.title {
  font-size: 2.5rem;
}

.players.setting {
  grid-column: 1;
  grid-row: 2;
}

.questions.setting {
  grid-column: 2;
  grid-row: 2;
}

.theme.setting {
  grid-column: 1 / -1;
  grid-row: 3;
}
/* ... */

